plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'cz.mamstylcendy.cards'
    compileSdk 35

    defaultConfig {
        applicationId "cz.mamstylcendy.cards"
        minSdk 24
        targetSdk 35
        versionCode 31
        versionName "2.2.1"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        def DEEP_LINK_DOMAIN = "karticky.spojenka.cz"
        def DEEP_LINK_PATH_PREFIX = "/share";

        buildConfigField "java.time.Instant", "BUILD_TIME", "java.time.Instant.parse(\"${Instant.now()}\")"
        buildConfigField "String", "REMOTE_CONFIG_LOCATION", "\"https://karticky.spojenka.cz/appdata/config.json\""
        buildConfigField "String", "REMOTE_BUILD_GRADLE", "\"https://raw.githubusercontent.com/HelloOO7/Karticky/refs/heads/master/app/build.gradle\""
        buildConfigField "String", "GITHUB_HOMEPAGE", "\"https://github.com/HelloOO7/Karticky\""
        buildConfigField "String", "APP_HOMEPAGE", "\"https://karticky.spojenka.cz\""
        buildConfigField "String", "DEEP_LINK_BASE_URL", "\"https://${DEEP_LINK_DOMAIN}${DEEP_LINK_PATH_PREFIX}\""

        resValue "string", "deep_link_domain", DEEP_LINK_DOMAIN
        resValue "string", "deep_link_path_prefix", DEEP_LINK_PATH_PREFIX
    }

    buildFeatures {
        buildConfig true
        viewBinding true
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17

        coreLibraryDesugaringEnabled true
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.recyclerview

    implementation libs.zxing
    implementation libs.jackson.core
    implementation libs.jackson.databind
    implementation libs.jsoup
    implementation libs.dagger
    implementation libs.work
    implementation libs.camerax.camera2
    implementation libs.camerax.lifecycle
    implementation libs.camerax.view
    implementation libs.colorpicker

    annotationProcessor libs.dagger.compiler

    coreLibraryDesugaring libs.desugaring

    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}